--- a/mpr_sem5/package.json
+++ b/mpr_sem5/package.json
@@ -16,7 +16,8 @@
     "@mui/material": "^5.16.6",
     "@mui/system": "^5.16.6",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
