--- a/mpr_sem5/package.json
+++ b/mpr_sem5/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.6",
     "@mui/system": "^5.16.6",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0"
