--- a/mpr_sem5/package.json
+++ b/mpr_sem5/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
