Initial commit of my personal project version

--- a/mpr_sem5/package.json
+++ b/mpr_sem5/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^5.16.7",
+    "@mui/icons-material": "^5.18.0",
     "@mui/material": "^5.16.6",
     "@mui/system": "^5.16.6",
     "axios": "^1.7.7",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
