--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^4.21.0",
-    "mongoose": "^8.7.0"
+    "mongoose": "^8.7.0",
+    "multer": "^2.0.2"
   }
 }
