--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,6 @@
     "dotenv": "^17.2.1",
     "express": "^4.21.0",
     "mongoose": "^8.7.0",
-    "multer": "^2.0.2"
+    "multer": "^1.4.5-lts.1"
   }
 }
